# study-langraph

./: .env.example  .gitignore  docs.yaml  pyproject.toml
.claude/epics/langchain-learning-roadmap/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  10.md  11.md  13.md  14.md  2.md  3.md  4-analysis.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/langchain-learning-roadmap/updates/2/: stream-A.md
.claude/epics/langchain-learning-roadmap/updates/3/: stream-A.md
.claude/epics/langchain-learning-roadmap/updates/4/: progress.md  stream-A.md  stream-B.md  stream-C.md  stream-D.md  stream-F.md  stream-G.md  stream-H.md
.claude/epics/langchain-learning-roadmap/updates/9/: stream-A.md
.claude/prds/: langchain-learning-roadmap.md
docs/: README.md  example_usage.py  quick_start.py
docs/formatters/: __init__.py  base_formatter.py  html_formatter.py  markdown_formatter.py  pdf_formatter.py
docs/generator/: __init__.py  api_generator.py  cli.py  code_parser.py  config.py  template_engine.py  tutorial_generator.py
docs/templates/: api_class.md  api_module.md  doc_index.md  tutorial_main.md
examples/: template_base_demo.py
jupyter_env/notebooks/01_基础概念/: 01_langchain_introduction.ipynb  02_llm_basics.ipynb  03_prompts_templates.ipynb
jupyter_env/notebooks/02_核心组件/: 01_chains_introduction.ipynb  02_agents_basics.ipynb
jupyter_env/notebooks/utils/: comprehensive_guide.ipynb  learning_helpers.py  progress_tracker.py  troubleshooting.ipynb
jupyter_env/scripts/: setup_env.py  start_jupyter.py
multi_agent_platform/src/agents/base/: __init__.py  agent.py  config.py  memory.py  state.py  tools.py
multi_agent_platform/src/communication/: __init__.py  channels.py  protocols.py  router.py  serialization.py
multi_agent_platform/src/graph/: __init__.py  state.py
rag_knowledge_system/: README.md  __init__.py  demo.py  requirements.txt
rag_knowledge_system/config/: __init__.py  models.py  settings.py
rag_knowledge_system/src/: __init__.py
rag_knowledge_system/src/api/: __init__.py  models.py
rag_knowledge_system/src/document_processor/: __init__.py  loaders.py  metadata.py  processor.py  splitters.py
rag_knowledge_system/src/generation/: __init__.py  chains.py  context.py  prompts.py
rag_knowledge_system/src/retrieval/: __init__.py  rerankers.py  retrievers.py
rag_knowledge_system/src/vectorstore/: __init__.py  embeddings.py  indexing.py  manager.py  stores.py
src/langchain_learning/: __init__.py
src/langchain_learning/agents/: __init__.py
src/langchain_learning/chains/: __init__.py
src/langchain_learning/core/: __init__.py  base.py  config.py  example_runner.py  exceptions.py  llm_factory.py  logger.py  prompt_manager.py  tools.py
src/langchain_learning/tools/: __init__.py
src/langchain_learning/utils/: __init__.py  file_utils.py  text_utils.py
templates/: README.md  __init__.py
templates/agents/: __init__.py  base_agent.py  collaborative_agent.py  conversational_agent.py  rag_agent.py  tool_calling_agent.py
templates/base/: __init__.py  config_loader.py  parameter_validator.py  template_base.py
templates/chains/: __init__.py  conditional_chain.py  parallel_chain.py  pipeline_chain.py  sequential_chain.py
templates/configs/: default.yaml  development.yaml  production.yaml
templates/configs/template_configs/: agent_template.yaml  chain_template.yaml  data_template.yaml  example_template.yaml  llm_template.yaml
templates/data/: __init__.py  document_loader.py  retrieval_template.py  text_splitter.py  vectorstore_template.py
templates/evaluation/: __init__.py  accuracy_eval.py  performance_eval.py
templates/examples/: chain_templates_demo.py  llm_templates_demo.py  prompt_templates_demo.py
templates/examples/basic_examples/: 01_llm_basic_usage.py  02_data_processing_basics.py
templates/examples/best_practices/: performance_optimization.md  troubleshooting_guide.md
templates/examples/tutorials/: 01_getting_started.md
templates/llm/: __init__.py  anthropic_template.py  local_llm_template.py  multi_model_template.py  openai_template.py
templates/memory/: __init__.py  conversation_memory.py  summary_memory.py
templates/prompts/: __init__.py  chat_template.py  completion_template.py  few_shot_template.py  role_playing_template.py
tests/: __init__.py  test_core_config.py  test_core_tools.py  test_utils_text.py
tests/templates/: __init__.py
tests/templates/agents/: __init__.py  test_base_agent.py
tests/templates/base/: __init__.py  test_config_loader.py  test_parameter_validator.py  test_template_base.py
tests/templates/chains/: __init__.py  test_sequential_chain.py
tests/templates/data/: __init__.py  test_document_loader.py  test_integration.py  test_text_splitter.py
tests/templates/evaluation/: __init__.py  test_accuracy_eval.py  test_performance_eval.py
tests/templates/llm/: __init__.py  test_multi_model_template.py  test_openai_template.py
tests/templates/memory/: __init__.py  test_conversation_memory.py  test_summary_memory.py
tests/templates/prompts/: __init__.py  test_chat_template.py
